[metadata]
name = stallion-python-sdk
version = 1.2.2
author = amirhnajafiz
author_email = najafizadeh21@gmail.com
description = SDK for Stallion message broker
long_description= file: README.md
long_description_content_type = text/markdown
url = https://github.com/amirhnajafiz/stallion-python-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src